# Project-Procedurally-Generated-Platformer

./: .gitignore  CMakeLists.txt  README.md  log.txt  run.sh  run.sh~
assets/: .tiles.xml.kate-swp  tiles.xml
code/: .Main.cpp.kate-swp  Block.cc  Block.cpp  Block.h  BlockManager.cpp  BlockManager.h  Character.cc  Character.cpp  Character.h  Collidable.cc  Collidable.h  Main.cc  Main.cpp  Physics.cc  Physics.h  World.cpp  World.h
code/blocks/: BlockManager.cpp  BlockManager.h  BlockType.cpp  BlockType.h  BlockTypes.cpp  BlockTypes.h  a.out  test.cpp  tiles.xml
code/camera/: Camera.cpp  Camera.h
code/physics/: Physics.cpp  Physics.h
code/player/: .Character.cpp.kate-swp  Character.cpp  Character.h
code/scenes/: .gameScene.cpp.kate-swp  EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  Menu.cpp  Menu.h  PauseScene.cpp  PauseScene.h  PlatformerManager.cpp  PlatformerManager.h  gameScene.cpp  gameScene.h
code/text/: TextEntity.cpp  TextEntity.h
code/world/: World.cpp  World.h
code/world/generators/: BasicWorldGenerator.cpp  BasicWorldGenerator.h  TestGenerator.cpp  TestGenerator.h  WorldGenerator.cpp  WorldGenerator.h
code/world/generators/basic_generator/: BasicWorldGenerator.cpp  BasicWorldGenerator.h  PathConnectionType.h
presentation/: graph.dot  presentation.tex  texte.txt
report/: main.tex  makefile
